# Localrepo

aicircle-main/: .gitignore  README.md  amplify.yml
aicircle-main/.github/workflows/: main.yml
aicircle-main/aicircle_back/: .env.example  README.md  pyproject.toml
aicircle-main/aicircle_back/aicircle_back/: api_urls.py  celery.py  urls.py  views.py
aicircle-main/aicircle_back/base/: abstract_models.py  pagination.py  views.py
aicircle-main/aicircle_back/organizations/: admin.py  mixins.py  models.py  serializers.py  urls.py  views.py
aicircle-main/aicircle_back/settings/: common.py  development.py  production.py
aicircle-main/aicircle_back/users/: admin.py  managers.py  models.py  serializers.py  urls.py  utils.py  views.py
aicircle-main/aicircle_back/users/backend/: authentication_backends.py
aicircle-main/aicircle_front/: index.html  package-lock.json  package.json  tailwind.config.ts
aicircle-main/aicircle_front/src/: index.css
aicircle-main/aicircle_front/src/components/landing/: CommunitySection.tsx  FeaturedProjectsSection.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  MarketplaceSection.tsx  Navbar.tsx  ValuePropsSection.tsx
aicircle-main/aicircle_front/src/components/ui/: form.tsx  sidebar.tsx
aicircle-main/aicircle_front/src/pages/: Index.tsx
